--- a/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
+++ b/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
@@ -12,3 +12,17 @@
   margin-top: 15px;
   margin-left: auto;
 }
+
+.inpPass {
+  position: relative;
+}
+
+.icon {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: var(--primary-color);
+}
