--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -13,8 +13,7 @@
 .overlay {
   width: 100%;
   height: 100%;
-
-  // background: var(--overlay-color);
+  background: var(--overlay-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,9 +23,10 @@
   padding: 20px;
   border-radius: 12px;
   background: var(--bg-color);
-  transition: all 0.3s ease 0s;
-  transform: scale(0.5);
-  max-width: 60%;
+
+  // transition: all 0.3s ease 0s;
+  // transform: scale(0.5);
+  // max-width: 60%;
 }
 
 .opened {
@@ -34,13 +34,13 @@
   pointer-events: auto;
   z-index: var(--modal-z-index);
 
-  .content {
-    transform: scale(1);
-  }
+  // .content {
+  //   transform: scale(1);
+  // }
 }
 
-.isClosing {
-  .content {
-    transform: scale(0.2);
-  }
-}
+// .isClosing {
+//   .content {
+//     transform: scale(0.2);
+//   }
+// }
