--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -23,10 +23,9 @@
   padding: 20px;
   border-radius: 12px;
   background: var(--bg-color);
-
-  // transition: all 0.3s ease 0s;
-  // transform: scale(0.5);
-  // max-width: 60%;
+  transition: all 0.3s ease 0s;
+  transform: scale(0.5);
+  max-width: 60%;
 }
 
 .opened {
@@ -34,13 +33,13 @@
   pointer-events: auto;
   z-index: var(--modal-z-index);
 
-  // .content {
-  //   transform: scale(1);
-  // }
+  .content {
+    transform: scale(1);
+  }
 }
 
-// .isClosing {
-//   .content {
-//     transform: scale(0.2);
-//   }
-// }
+.isClosing {
+  .content {
+    transform: scale(0.2);
+  }
+}
