--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -3,7 +3,7 @@
   --inverted-bg-color: #090949;
   --primary-color: #0232c2;
   --secondary-color: #0449e0;
-  --inverted-primary-color: #04ff04;
+  --inverted-primary-color: #11d711;
   --inverted-secondary-color: #049604;
 }
 
