--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -5,6 +5,13 @@
   --secondary-color: #0449e0;
   --inverted-primary-color: #11d711;
   --inverted-secondary-color: #049604;
+
+  // sceleton
+  --skeleton-shadow: rgba(0 0 0 / 20%);
+  --skeleton-color: #fff;
+
+  // code
+  --code-bg: #fff;
 }
 
 // .app.light
