--- a/src/shared/ui/AppLink/AppLink.module.scss
+++ b/src/shared/ui/AppLink/AppLink.module.scss
@@ -1,5 +1,10 @@
 .appLink {
   color: var(--primary-color);
+  transition: opacity 0.3s ease 0s;
+
+  &:hover {
+    opacity: 0.7;
+  }
 }
 
 .primary {
