--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -2,6 +2,13 @@
   cursor: pointer;
   color: var(--primary-color);
   padding: 6px 15px;
+  transition: opacity 0.3s ease 0s;
+
+  &:hover {
+    opacity: 0.8;
+    fill-opacity: 80%;
+    stroke-opacity: 80%;
+  }
 }
 
 .clear,
