--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -4,8 +4,27 @@
 }
 
 .text {
-  font: var(--font-m);
   color: var(--secondary-color);
+}
+
+.size_m {
+  .title {
+    font: var(--font-l);
+  }
+
+  .text {
+    font: var(--font-m);
+  }
+}
+
+.size_l {
+  .title {
+    font: var(--font-xl);
+  }
+
+  .text {
+    font: var(--font-l);
+  }
 }
 
 .error {
