--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,7 @@
 .app_dark_theme {
-  --bg-color: #090949;
+  // --bg-color: #090949;
+
+  --bg-color: var(--red-dark);
   --inverted-bg-color: #e8e8ea;
   --primary-color: #04ff04;
   --secondary-color: #049604;
