--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -3,6 +3,7 @@
   width: var(--sidebar-width);
   background: var(--inverted-bg-color);
   position: relative;
+  flex-shrink: 0;
   transition: width 0.3s ease 0s;
 }
 
