--- a/src/widgets/Page/Page.module.scss
+++ b/src/widgets/Page/Page.module.scss
@@ -1,5 +1,6 @@
 .page {
-  flex-grow: 1;
+  // flex-grow: 1;
+  flex: 1 1 auto;
   padding: 20px 20px 20px 45px;
   height: calc(100vh - var(--navbar-height));
   overflow-y: auto;
