--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -1,49 +1,46 @@
 .articleList {
-  display: grid;
-  gap: 20px;
-
-  // flex-grow: 1;
-  // padding: 20px 20px 20px 45px;
-  // height: calc(100vh - var(--navbar-height));
-  // overflow-y: auto;
+  flex-grow: 1;
+  padding: 20px 20px 20px 45px;
+  height: calc(100vh - var(--navbar-height));
+  overflow-y: auto;
   width: 100%;
 }
 
 .BIG {
-  &.articleList {
-    grid-template-columns: repeat(auto-fit, 1fr);
-  }
-
-  // .card {
-  //   margin: 30px 30px 0;
+  // &.articleList {
+  //   grid-template-columns: repeat(auto-fit, 1fr);
   // }
+
+  .card {
+    margin: 30px 30px 0;
+  }
 }
 
 .SMALL {
-  &.articleList {
-    grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+  // &.articleList {
+  //   grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+  // }
+  .card {
+    margin-top: 30px;
   }
-
-  // margin: 30px;
 }
 
-// .itemsWrapper {
-//   display: flex;
-//   flex-wrap: wrap;
-//   justify-content: space-between;
-//   gap: 8px;
-//   margin: 0 30px;
-// }
+.itemsWrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  row-gap: 15px;
+}
 
-// .skeleton {
-//   padding-bottom: 30px;
-// }
+.skeleton {
+  padding-bottom: 30px;
+}
 
-// .itemContainer {
-//   width: 230px;
-//   display: flex;
-//   flex-wrap: wrap;
-//   justify-content: space-between;
-//   gap: 8px;
-//   margin-right: 30px;
-// }
+.itemContainer {
+  @media (max-width: 1024px) {
+    width: 50%;
+  }
+
+  @media (max-width: 300px) {
+    width: 100%;
+  }
+}
