--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -10,6 +10,10 @@
   display: flex;
 }
 
+.filter {
+  margin-right: 25px;
+}
+
 .BIG {
   // &.articleList {
   //   grid-template-columns: repeat(auto-fit, 1fr);
