--- a/src/features/notificationButton/ui/NotificationButton/NotificationButton.module.scss
+++ b/src/features/notificationButton/ui/NotificationButton/NotificationButton.module.scss
@@ -4,3 +4,13 @@
   width: 500px;
   overflow-y: auto;
 }
+
+.notificationContainer {
+  position: relative;
+}
+
+.notificationCount {
+  position: absolute;
+  bottom: -8px;
+  right: -8px;
+}
