--- a/src/entities/Notification/ui/NotificationItem/NotificationItem.module.scss
+++ b/src/entities/Notification/ui/NotificationItem/NotificationItem.module.scss
@@ -2,3 +2,17 @@
 .link {
   width: 100%;
 }
+
+.notificationItem {
+  display: flex;
+  justify-content: space-between;
+}
+
+.content {
+  display: inline-block;
+}
+
+.clearBtn {
+  width: 22px;
+  height: 22px;
+}
