--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -6,7 +6,18 @@
   --inverted-primary-color: #0232c2;
   --inverted-secondary-color: #0452ff;
 
-  // sceleton
+  // redesigned
+  --dark-bg-redesigned: #090f11;
+  --bg-redesigned: #0c1214;
+  --light-bg-redesigned: #151c1f;
+  --text-redesigned: #dbdbdb;
+  --hint-redesigned: #555;
+  --cancel-redesigned: #d95757;
+  --save-redesigned: #6cd98b;
+  --icon-redesigned: #74a2b2;
+  --accent-redesigned: #5ed3f3;
+
+  // skeleton
   --skeleton-shadow: #2b2be8;
   --skeleton-color: #1515ad;
 
