--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,6 +1,10 @@
+/* stylelint-disable declaration-colon-newline-after */
 :root {
-  // s
   --font-family-main: consolas, 'Times New Roman', serif;
+  --font-family-text-redesigned: 'Nunito Sans', sans-serif;
+  --font-family-header-redesigned: 'Roboto', sans-serif;
+
+  // s
   --font-size-s: 12px;
   --font-line-s: 20px;
   --font-s: var(--font-size-s) / var(--font-line-s) var(--font-family-main);
@@ -21,7 +25,8 @@
   --font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main);
 
   // Размеры
-  --navbar-height: 50px;
+  // --navbar-height: 50px;
+  --navbar-height: 68.5px;
   --sidebar-width: 300px;
   --sidebar-width-collapsed: 80px;
 
@@ -33,4 +38,22 @@
   --overlay-color: rgba(0 0 0 / 60%);
   --red-light: #f00;
   --red-dark: #ce0505;
+
+  // redesigned
+
+  // s
+  --font-s-redesigned: var(--font-size-s) / var(--font-line-s)
+    var(--font-family-text-redesigned);
+
+  // m
+  --font-m-redesigned: var(--font-size-m) / var(--font-line-m)
+    var(--font-family-text-redesigned);
+
+  // l
+  --font-l-redesigned: var(--font-size-l) / var(--font-line-l)
+    var(--font-family-header-redesigned);
+
+  // xl
+  --font-xl-redesigned: var(--font-size-xl) / var(--font-line-xl)
+    var(--font-family-header-redesigned);
 }
