--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -15,19 +15,12 @@
 }
 
 .BIG {
-  // &.articleList {
-  //   grid-template-columns: repeat(auto-fit, 1fr);
-  // }
-
   .card {
     margin: 30px 30px 0;
   }
 }
 
 .SMALL {
-  // &.articleList {
-  //   grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
-  // }
   .card {
     margin-top: 30px;
   }
@@ -37,6 +30,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   row-gap: 15px;
+  margin-right: 20px;
 }
 
 .skeleton {
