--- a/src/shared/ui/redesigned/AppLogo/AppLogo.module.scss
+++ b/src/shared/ui/redesigned/AppLogo/AppLogo.module.scss
@@ -1,6 +1,10 @@
 /* stylelint-disable declaration-colon-newline-after */
 .appLogoWrapper {
   position: relative;
+
+  svg {
+    z-index: 5;
+  }
 }
 
 .gradientBig {
@@ -18,6 +22,7 @@
   height: 300px;
   border-radius: 50%;
   opacity: 0.6;
+  pointer-events: none;
 }
 
 .gradientSmall {
@@ -34,4 +39,5 @@
   );
   border-radius: 50%;
   opacity: 0.6;
+  pointer-events: none;
 }
