--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -5,27 +5,27 @@
   position: relative;
   flex-shrink: 0;
   transition: width 0.3s ease 0s;
-}
 
-.switchers {
-  position: absolute;
-  bottom: 20px;
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-  width: 100%;
-}
+  .switchers {
+    position: absolute;
+    bottom: 20px;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    width: 100%;
+  }
 
-.collapseBtn {
-  position: absolute;
-  right: -32px;
-  bottom: 32px;
-  z-index: 2;
-}
+  .collapseBtn {
+    position: absolute;
+    right: -32px;
+    bottom: 32px;
+    z-index: 2;
+  }
 
-.items {
-  margin-top: 20px;
-  margin-left: 30px;
+  .items {
+    margin-top: 20px;
+    margin-left: 30px;
+  }
 }
 
 .collapsed {
@@ -42,8 +42,49 @@
   width: 220px;
   height: 100%;
   border-radius: 32px;
+  position: relative;
+
+  .appLogo {
+    padding-top: 20px;
+  }
+
+  .items {
+    margin-top: 40px;
+  }
+
+  .collapseBtn {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: rotate(90deg);
+    z-index: 5;
+  }
+
+  .switchers {
+    position: absolute;
+    bottom: 40px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    gap: 16px;
+  }
 }
 
-.appLogo {
-  padding-top: 20px;
+.collapsedRedesigned {
+  width: 50px;
+
+  .items {
+    margin-top: 40px;
+    align-items: center;
+    display: flex;
+  }
+
+  .switchers {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .collapseBtn {
+    transform: rotate(-90deg);
+  }
 }
