--- a/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
+++ b/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable declaration-colon-newline-after */
 .item {
   display: flex;
   align-items: center;
@@ -16,6 +17,41 @@
   .link {
     opacity: 0;
     transition: opacity 0.1s ease 0s;
+    width: 0;
+  }
+}
+
+.itemRedesigned {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 0 16px;
+}
+
+.active {
+  background: linear-gradient(
+    89.97deg,
+    rgb(94 211 243 / 30%) 1.15%,
+    rgb(94 211 243 / 0%) 99.97%
+  );
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    width: 2px;
+    left: 0;
+    background: var(--accent-redesigned);
+    height: 100%;
+  }
+}
+
+.collapsedRedesigned {
+  padding: 0 8px;
+
+  .link {
+    opacity: 0;
+    margin: 0;
     width: 0;
   }
 }
