--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -43,6 +43,7 @@
   height: 100%;
   border-radius: 32px;
   position: relative;
+  transition: width 0.15s ease-in-out 0s;
 
   .appLogo {
     padding-top: 20px;
