--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -23,28 +23,25 @@
   .img {
     width: 100%;
     max-height: 250px;
-    margin: 16px 0;
     object-fit: cover;
+    margin: 16px 0;
   }
 
   .footer {
     display: flex;
     align-items: center;
-    gap: 8px;
     margin-top: 16px;
   }
 
   .textBlock {
-    max-height: 210px;
+    max-height: 200px;
     overflow-y: hidden;
-    text-overflow: ellipsis;
   }
 }
 
 .SMALL {
   width: 230px;
-  display: inherit;
-  transition: all 0.3s ease 0s;
+  transition: 0.2s;
   cursor: pointer;
 
   .date {
