--- a/src/shared/ui/redesigned/Button/Button.module.scss
+++ b/src/shared/ui/redesigned/Button/Button.module.scss
@@ -1,12 +1,33 @@
+.addonLeft svg,
+.addonRight svg {
+  color: var(--hint-redesigned);
+}
+
 .button {
   cursor: pointer;
   color: var(--text-redesigned);
-  padding: 6px 15px;
+  padding: 8px 16px;
   transition: opacity 0.3s ease 0s;
+  display: flex;
+  align-items: center;
 
   &:hover {
     color: var(--accent-redesigned);
+
+    .addonLeft svg,
+    .addonRight svg {
+      color: var(--accent-redesigned);
+    }
   }
+}
+
+.widthAddon {
+  padding: 0 16px;
+}
+
+.addonLeft,
+.addonRight {
+  display: flex;
 }
 
 .clear {
@@ -14,6 +35,13 @@
   border: none;
   background: none;
   outline: none;
+}
+
+.filled {
+  background: var(--light-bg-redesigned);
+  border: none;
+  outline: none;
+  border-radius: 34px;
 }
 
 .square {
