redesigned profile card

--- a/src/shared/ui/redesigned/Input/Input.module.scss
+++ b/src/shared/ui/redesigned/Input/Input.module.scss
@@ -21,6 +21,18 @@
   padding-right: 8px;
 }
 
+.s {
+  height: 32px;
+}
+
+.m {
+  height: 38px;
+}
+
+.l {
+  height: 44px;
+}
+
 .focused {
   border: 2px solid var(--accent-redesigned);
 
