--- a/src/widgets/Page/ui/Page.module.scss
+++ b/src/widgets/Page/ui/Page.module.scss
@@ -2,13 +2,13 @@
   // flex-grow: 1;
   flex: 1 1 auto;
   padding: 20px 20px 20px 45px;
-  height: calc(100vh - var(--navbar-height));
   overflow-y: auto;
   width: 100%;
 }
 
 .pageRedesigned {
   overflow-y: auto;
+  height: 100%;
 }
 
 .trigger {
